Cleanup DataCallBuilder - Remove unnecessary http headers - Read and write data all at once instead of creating unnecessary buffers - Don't disconnect connection to improve reusability - Replace deprecated URL creation